# chevron_fast_html

./: .gitignore  README.md  pyproject.toml  scratch.ipynb
chevron_fast_html/: main.py
chevron_fast_html/static/: index.js  styles.css
chevron_fast_html/templates/: index.html
