[tool.poetry]
name = "chevron-fast-html"
version = "0.1.0"
description = ""
authors = ["mgbvox <mgbvox@gmail.com>"]
readme = "README.md"
packages = [{include = "chevron_fast_html"}]

[tool.poetry.dependencies]
python = "^3.9"
chevron = "^0.14.0"
fastapi = {extras = ["all"], version = "^0.104.1"}
jupyterlab = "^4.0.8"
pydantic = "^2.5.1"
jinja2 = "^3.1.2"
numpy = "^1.26.2"
jupyter = "^1.0.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
